--- a/Quadridge/Quadridge.csproj
+++ b/Quadridge/Quadridge.csproj
@@ -178,6 +178,20 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="Models\User.cs" />
+    <Compile Include="Models\Client.cs" />
+    <Compile Include="Models\Deal.cs" />
+    <Compile Include="Models\Bank.cs" />
+    <Compile Include="Models\Lawyer.cs" />
+    <Compile Include="Controllers\BanksController.cs" />
+    <Compile Include="Controllers\UsersController.cs" />
+    <Compile Include="Controllers\DealsController.cs" />
+    <Compile Include="Controllers\LawyersController.cs" />
+    <Compile Include="Controllers\ClientsController.cs" />
+    <Compile Include="Models\Company.cs" />
+    <Compile Include="Controllers\CompaniesController.cs" />
+    <Compile Include="Models\ClientInteractions.cs" />
+    <Compile Include="Models\Interaction.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
@@ -273,6 +287,11 @@
         </WebProjectProperties>
       </FlavorProperties>
     </VisualStudio>
+    <MonoDevelop>
+      <Properties>
+        <XspParameters Port="8080" Address="127.0.0.1" SslMode="None" SslProtocol="Default" KeyType="None" CertFile="" KeyFile="" PasswordOptions="None" Password="" Verbose="True" />
+      </Properties>
+    </MonoDevelop>
   </ProjectExtensions>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
