Added the configuration files for the new classes

--- a/Quadridge/Quadridge.csproj
+++ b/Quadridge/Quadridge.csproj
@@ -186,6 +186,19 @@
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="EntityConfigurations\BankConfiguration.cs" />
+    <Compile Include="EntityConfigurations\ClientConfiguration.cs" />
+    <Compile Include="EntityConfigurations\ClientInteractionConfiguration.cs" />
+    <Compile Include="EntityConfigurations\CompanyConfiguration.cs" />
+    <Compile Include="EntityConfigurations\DealConfiguration.cs" />
+    <Compile Include="EntityConfigurations\DealTypeConfiguration.cs" />
+    <Compile Include="EntityConfigurations\ExpenseConfiguration.cs" />
+    <Compile Include="EntityConfigurations\ExpenseTypeConfiguration.cs" />
+    <Compile Include="EntityConfigurations\InteractionConfiguration.cs" />
+    <Compile Include="EntityConfigurations\LawyerConfiguration.cs" />
+    <Compile Include="EntityConfigurations\RevenueConfiguration.cs" />
+    <Compile Include="EntityConfigurations\StatusConfiguration.cs" />
+    <Compile Include="EntityConfigurations\UserConfiguration.cs" />
     <Compile Include="Models\Bank.cs" />
     <Compile Include="Models\Client.cs" />
     <Compile Include="Models\ClientInteraction.cs" />
