Changed the namespace for the models. Linked the Client list to a db context in the clientController

--- a/Quadridge/Quadridge.csproj
+++ b/Quadridge/Quadridge.csproj
@@ -344,6 +344,7 @@
     <Folder Include="Views\Companies\" />
     <Folder Include="Views\Deals\" />
     <Folder Include="Views\Lawyers\" />
+    <Folder Include="Views\test\" />
     <Folder Include="Views\Users\" />
   </ItemGroup>
   <ItemGroup>
