--- a/Quadridge/Quadridge.csproj
+++ b/Quadridge/Quadridge.csproj
@@ -207,6 +207,18 @@
     <Compile Include="Migrations\201807281939422_ClientInteractionsCascadeOnDelete.Designer.cs">
       <DependentUpon>201807281939422_ClientInteractionsCascadeOnDelete.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201807290801243_AddProvinceTable.cs" />
+    <Compile Include="Migrations\201807290801243_AddProvinceTable.Designer.cs">
+      <DependentUpon>201807290801243_AddProvinceTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201807290801497_PopulateProvinces.cs" />
+    <Compile Include="Migrations\201807290801497_PopulateProvinces.Designer.cs">
+      <DependentUpon>201807290801497_PopulateProvinces.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201807290847493_AddNameToDeal.cs" />
+    <Compile Include="Migrations\201807290847493_AddNameToDeal.Designer.cs">
+      <DependentUpon>201807290847493_AddNameToDeal.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Bank.cs" />
     <Compile Include="Models\Client.cs" />
@@ -233,6 +245,7 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Province.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuadridgeContext.cs" />
     <Compile Include="Models\Revenue.cs" />
@@ -240,6 +253,8 @@
     <Compile Include="Models\Status.cs" />
     <Compile Include="sysdiagram.cs" />
     <Compile Include="Models\User.cs" />
+    <Compile Include="ViewModels\NewCilientViewModel.cs" />
+    <Compile Include="ViewModels\NewDealViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-grid.css" />
@@ -345,11 +360,14 @@
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Clients\Details.cshtml" />
+    <Content Include="Views\Clients\New.cshtml" />
+    <Content Include="Views\Deals\Index.cshtml" />
+    <Content Include="Views\Deals\Details.cshtml" />
+    <Content Include="Views\Deals\New.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Views\Companies\" />
-    <Folder Include="Views\Deals\" />
     <Folder Include="Views\Lawyers\" />
     <Folder Include="Views\test\" />
     <Folder Include="Views\Users\" />
@@ -374,6 +392,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201807281939422_ClientInteractionsCascadeOnDelete.resx">
       <DependentUpon>201807281939422_ClientInteractionsCascadeOnDelete.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807290801243_AddProvinceTable.resx">
+      <DependentUpon>201807290801243_AddProvinceTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807290801497_PopulateProvinces.resx">
+      <DependentUpon>201807290801497_PopulateProvinces.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807290847493_AddNameToDeal.resx">
+      <DependentUpon>201807290847493_AddNameToDeal.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
