--- a/Quadridge/Quadridge.csproj
+++ b/Quadridge/Quadridge.csproj
@@ -219,6 +219,10 @@
     <Compile Include="Migrations\201807290847493_AddNameToDeal.Designer.cs">
       <DependentUpon>201807290847493_AddNameToDeal.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201807291512155_Sun29Change.cs" />
+    <Compile Include="Migrations\201807291512155_Sun29Change.Designer.cs">
+      <DependentUpon>201807291512155_Sun29Change.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Bank.cs" />
     <Compile Include="Models\Client.cs" />
@@ -253,8 +257,8 @@
     <Compile Include="Models\Status.cs" />
     <Compile Include="sysdiagram.cs" />
     <Compile Include="Models\User.cs" />
-    <Compile Include="ViewModels\NewCilientViewModel.cs" />
-    <Compile Include="ViewModels\NewDealViewModel.cs" />
+    <Compile Include="ViewModels\ClientFormViewModel.cs" />
+    <Compile Include="ViewModels\DealFormViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-grid.css" />
@@ -360,10 +364,10 @@
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Clients\Details.cshtml" />
-    <Content Include="Views\Clients\New.cshtml" />
+    <Content Include="Views\Clients\ClientForm.cshtml" />
     <Content Include="Views\Deals\Index.cshtml" />
     <Content Include="Views\Deals\Details.cshtml" />
-    <Content Include="Views\Deals\New.cshtml" />
+    <Content Include="Views\Deals\DealsForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -401,6 +405,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201807290847493_AddNameToDeal.resx">
       <DependentUpon>201807290847493_AddNameToDeal.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807291512155_Sun29Change.resx">
+      <DependentUpon>201807291512155_Sun29Change.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
